# newtype_maths

./: .gitignore  .history  Cargo.toml  rustfmt.toml  shell.nix
src/: lib.rs
test/: Cargo.toml
test/src/: main.rs
