[package]
name = "newtype_maths"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception OR AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"

